force-app/main/default/objects/Incident__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Human casualty</fullName>
                <default>true</default>
                <label>Human casualty</label>
            </value>
            <value>
                <fullName>Property damage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>