force-app/main/default/objects/Incident__c/fields/Infraction__c.field-meta.xml
<CustomField>
    <fullName>Infraction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infraction</label>
    <type>Checkbox</type>
</CustomField>