force-app/main/default/objects/Incident__c/fields/Mine__c.field-meta.xml
<CustomField>
    <fullName>Mine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mine</label>
    <referenceTo>Mine__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>