force-app/main/default/objects/Incident__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <label>Report</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>