force-app/main/default/objects/Incident__c/listViews/All_Incidents_with_Details.listView-meta.xml
<ListView>
    <fullName>All_Incidents_with_Details</fullName>
    <columns>NAME</columns>
    <columns>Incident_Date__c</columns>
    <columns>Incident_Type__c</columns>
    <columns>Mine__c</columns>
    <columns>Infraction__c</columns>
    <columns>Severity__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Incidents with Details</label>
</ListView>